fix collapse

--- a/jekyll/assets/css/bootstrap.css
+++ b/jekyll/assets/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (https://getbootstrap.com/docs/3.3/customize/?id=291a4c81652242984da6dad95da616f7)
- * Config saved to config.json and https://gist.github.com/291a4c81652242984da6dad95da616f7
+ * Generated using the Bootstrap Customizer (https://getbootstrap.com/docs/3.3/customize/?id=d5ae2e82e6c67263ae318536166ff9f7)
+ * Config saved to config.json and https://gist.github.com/d5ae2e82e6c67263ae318536166ff9f7
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -3464,6 +3464,41 @@ input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
   width: 100%;
+}
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity 0.15s linear;
+  -o-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
+}
+.fade.in {
+  opacity: 1;
+}
+.collapse {
+  display: none;
+}
+.collapse.in {
+  display: block;
+}
+tr.collapse.in {
+  display: table-row;
+}
+tbody.collapse.in {
+  display: table-row-group;
+}
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition-property: height, visibility;
+  -o-transition-property: height, visibility;
+     transition-property: height, visibility;
+  -webkit-transition-duration: 0.35s;
+  -o-transition-duration: 0.35s;
+     transition-duration: 0.35s;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+     transition-timing-function: ease;
 }
 .nav {
   margin-bottom: 0;
